--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
           <div class="select" id="tutorial">
             <img draggable="false" class="select-png" src="ftg/hti.png" alt="">
-            <a id="only-nav-text" href="">How To Install</a>
+            <a id="only-nav-text">How To Install</a>
           </div>
         </div>
       </div>
