--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="list-list">
                 <div class="list-info">
                   <div class="list-info-top">
-                    Reddit (light mode only)<a href="https://bit.ly/3zEixdz"><img draggable="false" src="ftg/download-button.png" style="height: 15px" class="download"></a>
+                    Reddit (light mode only)<a href="https://bit.ly/3xUHe48"><img draggable="false" src="ftg/download-button.png" style="height: 15px" class="download"></a>
                   </div>
                   <p style="padding: 0; margin: 0; margin-top: .3rem; font-size: .75rem; color: #a1a1a1;">last updated: 15.06.2022</p>
                 </div>
